# srcVisual

./: .env  .example.env  .gitignore  .pyrightconfig.json  Dockerfile  README.md  compose.yaml  gunicorn.conf.py  package-lock.json  pyproject.toml
docs/: AICommunication.md  BackendPackageMap.md  Context.md  Debugging.md  ProgrammingStyle.md  Rules.md  Workspace.md  handoff_default.md  notes.md  todo.md
examples/: e2e_custom_1x1_basic.xml  e2e_custom_1x2_basic.xml  e2e_custom_2x1_basic.xml  e2e_custom_2x2_same.xml  e2e_custom_2x3_same.xml  e2e_custom_add_xml_tags.xml  e2e_custom_archive_2_files.xml  e2e_custom_archive_cross_file_same_text.xml  e2e_custom_delete_only.xml  e2e_custom_diff_ws_equivalent.xml  e2e_custom_different_text_same_shape.xml  e2e_custom_insert_only.xml  e2e_custom_large_text_same.xml  e2e_custom_nested_diff.xml  e2e_custom_position.xml  e2e_custom_pre_marked_move.xml  e2e_custom_pre_marked_move_small.xml  e2e_custom_spacing_variation.xml  e2e_custom_too_short_text.xml  e2e_custom_two_independent_groups.xml  e2e_custom_whitespace_only.xml  e2e_generated_blocks_swapped_diff.xml  e2e_generated_complex_diff.xml  e2e_generated_file_split_diff.xml  e2e_generated_from_deleted_file_diff.xml  e2e_generated_function_call_reorder_diff.xml  e2e_generated_function_content_diff.xml  e2e_generated_lines_swapped_diff.xml  e2e_generated_lines_swapped_many_diff.xml  e2e_generated_nested_insert_diff.xml  e2e_generated_renamed_file_2_diff.xml  e2e_generated_renamed_file_diff.xml  e2e_generated_reorder_function_specifiers_diff.xml  e2e_generated_to_new_file_diff.xml  (+7 more)
(+245 files in other folders)
