[project]
name = "srcvisual"
version = "0.1.0"
description = "visualize srcml, srcdiff, and srcMove."
authors = [
    {name = "=",email = "ngstafford1@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.0.3,<10.0.0)",
    "pyright (>=1.1.409,<2.0.0)",
    "ruff (>=0.15.12,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.12,<0.16.0)",
    "pyright (>=1.1.409,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]
